# Faheem

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1a6ca58da895_add_username_column.py  1ebc2bed7d00_create_users_table.py  449aa04b804e_create_raw_processed_data_table.py  45c55a4a92d7_create_model_results_table.py  a97a98f0690e_add_competitor_column.py  bc8ab26d0fc8_create_companies_table.py  c4ad3b5e00ff_create_raw_data_table.py  cbb8ba11eb3f_create_data_sources_table.py
data/: essos_data.csv  westros_data.csv
faheem/: config.py  server.py
faheem/api/: auth_controller.py  companies_controller.py
faheem/db/: database.py
faheem/resources/: data.py  train.py  utils.py
faheem/resources/analysis/: analysis_models.py
faheem/resources/auth/: auth_dal.py  auth_helpers.py  auth_models.py  auth_schemas.py  auth_service.py
faheem/resources/companies/: companies_dal.py  companies_model.py  companies_models.py  companies_schemas.py  companies_service.py
faheem/resources/ml/: data.py  evaluate.py  utils.py
notebooks/: DataPreparation.ipynb  ModelExperimentation.ipynb
notebooks/models/: nb_model.pkl  tfidf_transformer.pkl  vectorizer.pkl
tests/code/: conftest.py  test_data.py  test_train.py
tests/data/: conftest.py  test_dataset.py
tests/model/: test_behavioral.py
tmp/flow/0/: meta.yaml
tmp/mlflow/0/: meta.yaml
tmp/mlflow/371059876512173790/: meta.yaml
tmp/mlflow/371059876512173790/546a0a30bc184f919c0f8f95f69581d2/: meta.yaml
tmp/mlflow/537934537701799281/: meta.yaml
tmp/mlflow/537934537701799281/3861296d8e4f41da944f3d60d9ccf1bd/: meta.yaml
tmp/mlflow/959873662289025224/: meta.yaml
tmp/mlflow/959873662289025224/2a2238b8d75447d697ff70aebe98e4a3/: meta.yaml
tmp/mlflow/959873662289025224/38737704a06b4749a48087caab311c70/: meta.yaml
tmp/mlflow/959873662289025224/4cf1d9ebcb054aada8127436bb9af3d2/: meta.yaml
tmp/mlflow/959873662289025224/71e3895f56e24edf8a6e756615d086e6/: meta.yaml
tmp/mlflow/959873662289025224/7409622f6a974763943b0373186b62cb/: meta.yaml
tmp/mlflow/959873662289025224/8071a5849b1e4794b45e6da06de92a95/: meta.yaml
(+360 files in other folders)
