[tool.poetry]
name = "faheem"
version = "0.1.0"
description = "Faheem is an end-to-end machine learning application -Built to learn MLOps-"
authors = ["Mamdouh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.29"
fastapi = {extras = ["all"], version = "^0.111.0"}
xlsx2csv = "^0.8.2"
scikit-learn = "^1.5.0"
mlflow = "^2.13.2"
pandas = "^2.2.2"
ruff = "^0.4.8"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
