[tool.poetry]
name = "faheem"
version = "0.1.0"
description = "Faheem is an end-to-end machine learning application -Built to learn MLOps-"
authors = ["Mamdouh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
scikit-learn = "^1.5.0"
mlflow = "^2.13.2"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
typer = "^0.12.3"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
bcrypt = "^4.1.3"

[tool.poetry.group.dev.dependencies]
polars = "^0.20.29"
xlsx2csv = "^0.8.2"
ruff = "^0.4.8"
great-expectations = "^0.18.16"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
